--- a/src/main/resources/ui/selfservice/extension/templates/orgmgr/organisationManagerTemplate.html
+++ b/src/main/resources/ui/selfservice/extension/templates/orgmgr/organisationManagerTemplate.html
@@ -6,6 +6,6 @@
         <h1>ORG Management<br/>({{user.userName}})</h1>
       </div>
 
-      <div id="organisation_list" class="backgrid"></div>
+      <div id="organisation_list"></div>
     </div>
 </div>
